The html, css, and  javascript were completed on this commit

--- a/style.css
+++ b/style.css
@@ -1,14 +1,32 @@
 body {
-    margin-top: 50px;
+	font-size: 20px;
+	font-family: sans-serif;
+	color: #333;
 }
-h1 {
-    font-family: 'Titan One', cursive;
-    text-align: center;
+#quiz {
+    margin-left: 50%;
 }
-footer {
-    text-align: center;
-    font-family: 'Alegreya SC', serif;
-    position: fixed;
-    bottom: 0;
-    left: 50%;
+.question {
+	font-weight: 600;
+}
+.answers {
+    margin-bottom: 20px;
+}
+.answers label {
+    display: block;
+}
+#submit {
+	font-family: sans-serif;
+	font-size: 20px;
+	background-color: #279;
+	color: #fff;
+	border: 0px;
+	border-radius: 3px;
+	padding: 20px;
+	cursor: pointer;
+    margin-bottom: 10px;
+    margin-left: 50%;
+}
+#submit:hover {
+	background-color: #38a;
 }
